Added preloading of iamges

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 </script>
 </head>
 
-<body>
+<body onload="preload();">
+<title>Oh My Die ! </title>
 <div id="pagetop">
 Oh My Die !
 </div>
@@ -55,7 +56,7 @@ Oh My Die !
 </br>
 Click the Die as close to clock value 50.
 </br>
-Be lucky on what die face comes up!
+Be lucky about what die face comes up!
 </div>
 <div id="info">
 Copyright 2015 by <a href="mailto:aloygupta1993@gmail.com">Aloy Gupta </a>
