--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@ Oh My Die !
 
 <div id="pagebottom">
 <div id="otherlinks">
+Contact Me :
+</br>
+<a href="https://www.facebook.com/aloy.gupta" target="_blank"><img src="fbicon.png"/></a>
 </div>
 <div id="howtoplay">
 </br>
