font code and page title

--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <html>
 <head>
+<title>Oh My Die ! </title>
 <link rel="stylesheet" type="text/css" href="index.css"/>
+<link href='http://fonts.googleapis.com/css?family=Arvo:700' rel='stylesheet' type='text/css'>
 <script src="omd.js">
 </script>
 </head>
 
 <body onload="preload();">
-<title>Oh My Die ! </title>
 <div id="pagetop">
 Oh My Die !
 </div>
